--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,58 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+body {
+  margin: 0 auto;
+  background: #efebe8;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.page-header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding:0;
+  margin: 0;
+}
+
+.page-header h1 {
+  font-size: 180px;
+  margin: 10% 0 0 0;
+}
+
+.page-header p {
+  margin: 5%;
+}
+
+.page-header .btn {
+  cursor: pointer;
+}
+
+.cards {
+  display:flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  margin: 12% 2% 8% 2%;
+}
+
+.cards a {
+  text-decoration: none;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  margin: 12% 2% 8% 2%;
+}
+
+
+/*
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+} */
