--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,72 @@ body {
 }
 
 
+footer {
+  background: #ecbc4c;
+  color: rgb(247, 247, 247);
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+footer a {
+  color: rgb(247, 247, 247);
+  font-size: 26px;
+}
+
+footer a:hover {
+  color: #bd6b00;
+}
+
+footer h3 {
+  font-weight: 600;
+  font-size: 23px;
+  margin-top: 10%;
+  text-align: center;
+}
+
+footer #social-media-footer a.fa-instagram,
+footer #social-media-footer a.fa-tiktok,
+footer #social-media-footer a.fa-x-twitter {
+  color: rgb(247, 247, 247);
+  transition: 0.4s;
+}
+
+footer #social-media-footer ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin-right: 10%;
+  margin-bottom: 0%;
+}
+
+footer #social-media-footer ul li {
+  font-size: 25px;
+  padding: 10px;
+  transition: 0.4s;
+}
+
+footer #social-media-footer ul li:hover a .fa-instagram {
+  color: #bd6b00;
+}
+
+footer #social-media-footer ul li:hover a .fa-tiktok {
+  color: #bd6b00;
+}
+footer #social-media-footer ul li:hover a .fa-x-twitter {
+  color: #bd6b00;
+}
+footer p {
+  padding-bottom: 20px;
+  margin: auto;
+  font-size: 16px;
+  text-align: center;
+}
+
+
 /*
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
