--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .page-header{
   display: flex;
   flex-direction: column;
@@ -40,12 +44,12 @@ body {
   margin-left: 2%;
 }
 
-.cards a {
+/* .cards a {
   text-decoration: none;
   text-align: center;
   justify-content: center;
   align-items: center;
-}
+} */
 
 .card {
   margin-right: 2%;
