--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ a {
   text-decoration: none;
 }
 
+h1, h3 {
+   font-family: "Lobster", sans-serif;
+}
+
 .page-header{
   display: flex;
   flex-direction: column;
