--- a/src/index.css
+++ b/src/index.css
@@ -16,67 +16,18 @@ h1, h3 {
    font-family: "Lobster", sans-serif;
 }
 
-.page-header{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding:0;
-  margin: 0;
-}
-
-.page-header h1 {
-  font-size: 180px;
-  margin: 10% 0 0 0;
-}
-
-.page-header p {
-  margin: 5%;
-}
-
 .page-header .btn {
   cursor: pointer;
-}
-
-.cards {
-  display:flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: center;
-  margin-right: 2%;
-  margin-left: 2%;
-}
-
-/* .cards a {
-  text-decoration: none;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-} */
-
-.card {
-  margin-right: 2%;
-  margin-left: 2%;
-}
-
-.payment-options {
-  display:flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: center;
-  margin-right: 2%;
-  margin-left: 2%;
 }
 
 
 footer {
   background: #ecbc4c;
-  color: rgb(247, 247, 247);
-  display: flex;
+  /*color: rgb(247, 247, 247); */
+  /* display: flex;
   align-items: center;
   align-content: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 footer a {
